Programa/ProAlg.output
Gramática

    0 $accept: v_desc_algoritmo $end

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg T_FALGORITMO T_PUNTO

    2 v_cabecera_alg: v_decl_globales v_decl_a_f v_decl_ent_sal T_COMENTARIO

    3 v_bloque_alg: v_bloque T_COMENTARIO

    4 v_decl_globales: v_declaracion_tipo v_decl_globales
    5                | v_declaracion_cte v_decl_globales
    6                | %empty

    7 v_decl_a_f: v_accion_d v_decl_a_f
    8           | v_funcion_d v_decl_a_f
    9           | %empty

   10 v_bloque: v_declaraciones v_instrucciones

   11 v_declaraciones: v_declaracion_tipo v_declaraciones
   12                | v_declaracion_cte v_declaraciones
   13                | v_declaracion_var v_declaraciones
   14                | %empty

   15 v_declaracion_tipo: T_TIPO v_lista_d_tipo T_FTIPO T_COMP_SECUENCIAL

   16 v_declaracion_cte: T_CONSTANTE v_lista_d_cte T_FCONST T_COMP_SECUENCIAL

   17 v_declaracion_var: T_VAR v_lista_d_var T_FVAR T_COMP_SECUENCIAL

   18 v_lista_d_tipo: T_ID T_CREAR_TIPO v_d_tipo T_COMP_SECUENCIAL v_lista_d_tipo
   19               | %empty

   20 v_d_tipo: T_TUPLA v_lista_campos T_FTUPLA
   21         | T_TABLA T_INICIO_ARRAY v_expresion_t T_SUBRANGO v_expresion_t T_FIN_ARRAY T_DE v_d_tipo
   22         | T_ID
   23         | v_expresion_t T_SUBRANGO v_expresion_t
   24         | T_REF v_d_tipo
   25         | v_tipo_base

   26 v_tipo_base: T_TIPO_BOOLEANO
   27            | T_TIPO_CARACTER
   28            | T_TIPO_ENTERO
   29            | T_TIPO_REAL
   30            | T_TIPO_CADENA

   31 v_expresion_t: v_expresion
   32              | T_LITERAL_CARACTER

   33 v_lista_campos: T_ID T_DEF_TIPO v_d_tipo T_COMP_SECUENCIAL v_lista_campos
   34               | %empty

   35 v_lista_d_cte: T_ID T_OP_REL_IGUAL v_literal T_COMP_SECUENCIAL v_lista_d_cte
   36              | %empty

   37 v_literal: T_LITERAL_CARACTER
   38          | v_literal_numerico
   39          | T_LITERAL_BOOLEANO
   40          | T_LITERAL_CADENA

   41 v_lista_d_var: v_lista_id T_COMP_SECUENCIAL v_lista_d_var
   42              | %empty

   43 v_lista_id: T_ID T_SEPARADOR v_lista_id
   44           | T_ID T_DEF_TIPO v_d_tipo

   45 $@1: %empty

   46 $@2: %empty

   47 v_decl_ent_sal: $@1 v_decl_ent $@2 v_decl_sal

   48 $@3: %empty

   49 v_decl_ent_sal: $@3 v_decl_sal

   50 v_decl_ent: T_ENT v_lista_d_var

   51 v_decl_sal: T_SAL v_lista_d_var
   52           | %empty

   53 v_expresion: v_exp
   54            | v_funcion_ll

   55 v_exp: v_exp T_OP_SUMA v_exp
   56      | v_exp T_OP_RESTA v_exp
   57      | v_exp T_OP_MULTI v_exp
   58      | v_exp T_OP_DIV v_exp
   59      | v_exp T_OP_MOD v_exp
   60      | v_exp T_OP_DIV_ENT v_exp
   61      | T_PARENTESIS_APERTURA v_exp T_PARENTESIS_CLAUSURA
   62      | v_operando
   63      | v_literal_numerico
   64      | T_OP_RESTA v_exp
   65      | T_OP_SUMA v_exp
   66      | T_NO v_exp
   67      | T_VERDADERO
   68      | T_FALSO
   69      | v_exp T_OP_REL_MENOR v_exp
   70      | v_exp T_OP_REL_MAYOR v_exp
   71      | v_exp T_OP_REL_IGUAL v_exp
   72      | v_exp T_OP_REL_DIF v_exp
   73      | v_exp T_OP_REL_MAYOR_IGUAL v_exp
   74      | v_exp T_OP_REL_MENOR_IGUAL v_exp
   75      | v_exp T_Y M v_exp
   76      | v_exp T_O M v_exp

   77 M: %empty

   78 v_literal_numerico: T_LITERAL_ENTERO
   79                   | T_LITERAL_REAL

   80 v_operando: T_ID
   81           | v_operando T_PUNTO v_operando
   82           | v_operando T_INICIO_ARRAY v_expresion T_FIN_ARRAY
   83           | v_operando T_REF

   84 v_instrucciones: v_instruccion T_COMP_SECUENCIAL M v_instrucciones
   85                | v_instruccion

   86 v_instruccion: T_CONTINUAR
   87              | v_asignacion
   88              | v_alternativa
   89              | v_iteracion
   90              | v_accion_ll

   91 v_asignacion: v_operando T_ASIGNACION v_expresion

   92 v_alternativa: v_opciones v_instrucciones M T_FSI

   93 v_opciones: T_SI v_expresion T_SIMBOLO_BLOQUE_IF M
   94           | v_opciones v_instrucciones N T_SIMBOLO_ELSE M v_expresion T_SIMBOLO_BLOQUE_IF M

   95 N: %empty

   96 v_iteracion: v_it_cota_fija
   97            | v_it_cota_exp

   98 v_it_cota_exp: T_MIENTRAS M v_expresion T_HACER M v_instrucciones T_FMIENTRAS

   99 v_it_cota_fija: T_PARA v_it_cota_fija_exp T_HACER M v_instrucciones T_FPARA

  100 v_it_cota_fija_exp: T_ID T_ASIGNACION v_expresion T_HASTA v_expresion

  101 v_accion_d: T_ACCION v_a_cabecera v_bloque T_FACCION

  102 v_funcion_d: T_FUNCION v_f_cabecera v_bloque T_DEV v_expresion T_FFUNCION

  103 v_a_cabecera: T_ID T_PARENTESIS_APERTURA v_d_par_form T_PARENTESIS_CLAUSURA T_COMP_SECUENCIAL

  104 v_f_cabecera: T_ID T_PARENTESIS_APERTURA v_lista_d_var T_PARENTESIS_CLAUSURA T_DEV v_d_tipo T_COMP_SECUENCIAL

  105 v_d_par_form: v_d_p_form T_COMP_SECUENCIAL v_d_par_form
  106             | %empty

  107 v_d_p_form: T_ENT v_lista_id T_DEF_TIPO
  108           | T_SAL v_lista_id T_DEF_TIPO
  109           | T_E_S v_lista_id T_DEF_TIPO

  110 v_accion_ll: T_ID T_PARENTESIS_APERTURA v_l_ll T_PARENTESIS_CLAUSURA

  111 v_funcion_ll: T_ID T_PARENTESIS_APERTURA v_l_ll T_PARENTESIS_CLAUSURA

  112 v_l_ll: v_expresion T_SEPARADOR v_l_ll
  113       | v_expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
T_LITERAL_ENTERO (258) 78
T_LITERAL_BOOLEANO (259) 39
T_LITERAL_REAL (260) 79
T_LITERAL_CARACTER (261) 32 37
T_LITERAL_CADENA (262) 40
T_TIPO_ENTERO (263) 28
T_TIPO_BOOLEANO (264) 26
T_TIPO_CARACTER (265) 27
T_TIPO_REAL (266) 29
T_TIPO_CADENA (267) 30
T_ID (268) 1 18 22 33 35 43 44 80 100 103 104 110 111
T_ALGORITMO (269) 1
T_FALGORITMO (270) 1
T_COMENTARIO (271) 2 3
T_COMP_SECUENCIAL (272) 1 15 16 17 18 33 35 41 84 103 104 105
T_TIPO (273) 15
T_FTIPO (274) 15
T_CONSTANTE (275) 16
T_FCONST (276) 16
T_VAR (277) 17
T_FVAR (278) 17
T_CREAR_TIPO (279) 18
T_TUPLA (280) 20
T_FTUPLA (281) 20
T_TABLA (282) 21
T_INICIO_ARRAY (283) 21 82
T_SUBRANGO (284) 21 23
T_FIN_ARRAY (285) 21 82
T_DE (286) 21
T_REF (287) 24 83
T_DEF_TIPO (288) 33 44 107 108 109
T_SEPARADOR (289) 43 112
T_ENT (290) 50 107
T_SAL (291) 51 108
T_PARENTESIS_APERTURA (292) 61 103 104 110 111
T_PARENTESIS_CLAUSURA (293) 61 103 104 110 111
T_Y (294) 75
T_O (295) 76
T_NO (296) 66
T_VERDADERO (297) 67
T_FALSO (298) 68
T_CONTINUAR (299) 86
T_ASIGNACION (300) 91 100
T_SI (301) 93
T_SIMBOLO_BLOQUE_IF (302) 93 94
T_SIMBOLO_ELSE (303) 94
T_FSI (304) 92
T_MIENTRAS (305) 98
T_HACER (306) 98 99
T_FMIENTRAS (307) 98
T_PARA (308) 99
T_HASTA (309) 100
T_FPARA (310) 99
T_ACCION (311) 101
T_FACCION (312) 101
T_FUNCION (313) 102
T_DEV (314) 102 104
T_FFUNCION (315) 102
T_E_S (316) 109
T_OP_REL_MENOR (317) 69
T_OP_REL_MAYOR (318) 70
T_OP_REL_IGUAL (319) 35 71
T_OP_REL_DIF (320) 72
T_OP_REL_MAYOR_IGUAL (321) 73
T_OP_REL_MENOR_IGUAL (322) 74
T_OP_SUMA (323) 55 65
T_OP_RESTA (324) 56 64
T_OP_MULTI (325) 57
T_OP_DIV (326) 58
T_OP_MOD (327) 59
T_OP_DIV_ENT (328) 60
T_PUNTO (329) 1 81


No terminales con las reglas donde aparecen

$accept (75)
    en la izquierda: 0
v_desc_algoritmo (76)
    en la izquierda: 1, en la derecha: 0
v_cabecera_alg (77)
    en la izquierda: 2, en la derecha: 1
v_bloque_alg (78)
    en la izquierda: 3, en la derecha: 1
v_decl_globales (79)
    en la izquierda: 4 5 6, en la derecha: 2 4 5
v_decl_a_f (80)
    en la izquierda: 7 8 9, en la derecha: 2 7 8
v_bloque (81)
    en la izquierda: 10, en la derecha: 3 101 102
v_declaraciones (82)
    en la izquierda: 11 12 13 14, en la derecha: 10 11 12 13
v_declaracion_tipo (83)
    en la izquierda: 15, en la derecha: 4 11
v_declaracion_cte (84)
    en la izquierda: 16, en la derecha: 5 12
v_declaracion_var (85)
    en la izquierda: 17, en la derecha: 13
v_lista_d_tipo (86)
    en la izquierda: 18 19, en la derecha: 15 18
v_d_tipo (87)
    en la izquierda: 20 21 22 23 24 25, en la derecha: 18 21 24 33
    44 104
v_tipo_base (88)
    en la izquierda: 26 27 28 29 30, en la derecha: 25
v_expresion_t (89)
    en la izquierda: 31 32, en la derecha: 21 23
v_lista_campos (90)
    en la izquierda: 33 34, en la derecha: 20 33
v_lista_d_cte (91)
    en la izquierda: 35 36, en la derecha: 16 35
v_literal (92)
    en la izquierda: 37 38 39 40, en la derecha: 35
v_lista_d_var (93)
    en la izquierda: 41 42, en la derecha: 17 41 50 51 104
v_lista_id (94)
    en la izquierda: 43 44, en la derecha: 41 43 107 108 109
v_decl_ent_sal (95)
    en la izquierda: 47 49, en la derecha: 2
$@1 (96)
    en la izquierda: 45, en la derecha: 47
$@2 (97)
    en la izquierda: 46, en la derecha: 47
$@3 (98)
    en la izquierda: 48, en la derecha: 49
v_decl_ent (99)
    en la izquierda: 50, en la derecha: 47
v_decl_sal (100)
    en la izquierda: 51 52, en la derecha: 47 49
v_expresion (101)
    en la izquierda: 53 54, en la derecha: 31 82 91 93 94 98 100 102
    112 113
v_exp (102)
    en la izquierda: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76, en la derecha: 53 55 56 57 58 59 60 61 64 65
    66 69 70 71 72 73 74 75 76
M (103)
    en la izquierda: 77, en la derecha: 75 76 84 92 93 94 98 99
v_literal_numerico (104)
    en la izquierda: 78 79, en la derecha: 38 63
v_operando (105)
    en la izquierda: 80 81 82 83, en la derecha: 62 81 82 83 91
v_instrucciones (106)
    en la izquierda: 84 85, en la derecha: 10 84 92 94 98 99
v_instruccion (107)
    en la izquierda: 86 87 88 89 90, en la derecha: 84 85
v_asignacion (108)
    en la izquierda: 91, en la derecha: 87
v_alternativa (109)
    en la izquierda: 92, en la derecha: 88
v_opciones (110)
    en la izquierda: 93 94, en la derecha: 92 94
N (111)
    en la izquierda: 95, en la derecha: 94
v_iteracion (112)
    en la izquierda: 96 97, en la derecha: 89
v_it_cota_exp (113)
    en la izquierda: 98, en la derecha: 97
v_it_cota_fija (114)
    en la izquierda: 99, en la derecha: 96
v_it_cota_fija_exp (115)
    en la izquierda: 100, en la derecha: 99
v_accion_d (116)
    en la izquierda: 101, en la derecha: 7
v_funcion_d (117)
    en la izquierda: 102, en la derecha: 8
v_a_cabecera (118)
    en la izquierda: 103, en la derecha: 101
v_f_cabecera (119)
    en la izquierda: 104, en la derecha: 102
v_d_par_form (120)
    en la izquierda: 105 106, en la derecha: 103 105
v_d_p_form (121)
    en la izquierda: 107 108 109, en la derecha: 105
v_accion_ll (122)
    en la izquierda: 110, en la derecha: 90
v_funcion_ll (123)
    en la izquierda: 111, en la derecha: 54
v_l_ll (124)
    en la izquierda: 112 113, en la derecha: 110 111 112


Estado 0

    0 $accept: . v_desc_algoritmo $end

    T_ALGORITMO  desplazar e ir al estado 1

    v_desc_algoritmo  ir al estado 2


Estado 1

    1 v_desc_algoritmo: T_ALGORITMO . T_ID T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg T_FALGORITMO T_PUNTO

    T_ID  desplazar e ir al estado 3


Estado 2

    0 $accept: v_desc_algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 v_desc_algoritmo: T_ALGORITMO T_ID . T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg T_FALGORITMO T_PUNTO

    T_COMP_SECUENCIAL  desplazar e ir al estado 5


Estado 4

    0 $accept: v_desc_algoritmo $end .

    $default  aceptar


Estado 5

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL . v_cabecera_alg v_bloque_alg T_FALGORITMO T_PUNTO

    T_TIPO       desplazar e ir al estado 6
    T_CONSTANTE  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (v_decl_globales)

    v_cabecera_alg      ir al estado 8
    v_decl_globales     ir al estado 9
    v_declaracion_tipo  ir al estado 10
    v_declaracion_cte   ir al estado 11


Estado 6

   15 v_declaracion_tipo: T_TIPO . v_lista_d_tipo T_FTIPO T_COMP_SECUENCIAL

    T_ID  desplazar e ir al estado 12

    $default  reduce usando la regla 19 (v_lista_d_tipo)

    v_lista_d_tipo  ir al estado 13


Estado 7

   16 v_declaracion_cte: T_CONSTANTE . v_lista_d_cte T_FCONST T_COMP_SECUENCIAL

    T_ID  desplazar e ir al estado 14

    $default  reduce usando la regla 36 (v_lista_d_cte)

    v_lista_d_cte  ir al estado 15


Estado 8

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL v_cabecera_alg . v_bloque_alg T_FALGORITMO T_PUNTO

    T_TIPO       desplazar e ir al estado 6
    T_CONSTANTE  desplazar e ir al estado 7
    T_VAR        desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_bloque_alg        ir al estado 17
    v_bloque            ir al estado 18
    v_declaraciones     ir al estado 19
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 9

    2 v_cabecera_alg: v_decl_globales . v_decl_a_f v_decl_ent_sal T_COMENTARIO

    T_ACCION   desplazar e ir al estado 23
    T_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (v_decl_a_f)

    v_decl_a_f   ir al estado 25
    v_accion_d   ir al estado 26
    v_funcion_d  ir al estado 27


Estado 10

    4 v_decl_globales: v_declaracion_tipo . v_decl_globales

    T_TIPO       desplazar e ir al estado 6
    T_CONSTANTE  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (v_decl_globales)

    v_decl_globales     ir al estado 28
    v_declaracion_tipo  ir al estado 10
    v_declaracion_cte   ir al estado 11


Estado 11

    5 v_decl_globales: v_declaracion_cte . v_decl_globales

    T_TIPO       desplazar e ir al estado 6
    T_CONSTANTE  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (v_decl_globales)

    v_decl_globales     ir al estado 29
    v_declaracion_tipo  ir al estado 10
    v_declaracion_cte   ir al estado 11


Estado 12

   18 v_lista_d_tipo: T_ID . T_CREAR_TIPO v_d_tipo T_COMP_SECUENCIAL v_lista_d_tipo

    T_CREAR_TIPO  desplazar e ir al estado 30


Estado 13

   15 v_declaracion_tipo: T_TIPO v_lista_d_tipo . T_FTIPO T_COMP_SECUENCIAL

    T_FTIPO  desplazar e ir al estado 31


Estado 14

   35 v_lista_d_cte: T_ID . T_OP_REL_IGUAL v_literal T_COMP_SECUENCIAL v_lista_d_cte

    T_OP_REL_IGUAL  desplazar e ir al estado 32


Estado 15

   16 v_declaracion_cte: T_CONSTANTE v_lista_d_cte . T_FCONST T_COMP_SECUENCIAL

    T_FCONST  desplazar e ir al estado 33


Estado 16

   17 v_declaracion_var: T_VAR . v_lista_d_var T_FVAR T_COMP_SECUENCIAL

    T_ID  desplazar e ir al estado 34

    $default  reduce usando la regla 42 (v_lista_d_var)

    v_lista_d_var  ir al estado 35
    v_lista_id     ir al estado 36


Estado 17

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg . T_FALGORITMO T_PUNTO

    T_FALGORITMO  desplazar e ir al estado 37


Estado 18

    3 v_bloque_alg: v_bloque . T_COMENTARIO

    T_COMENTARIO  desplazar e ir al estado 38


Estado 19

   10 v_bloque: v_declaraciones . v_instrucciones

    T_ID         desplazar e ir al estado 39
    T_CONTINUAR  desplazar e ir al estado 40
    T_SI         desplazar e ir al estado 41
    T_MIENTRAS   desplazar e ir al estado 42
    T_PARA       desplazar e ir al estado 43

    v_operando       ir al estado 44
    v_instrucciones  ir al estado 45
    v_instruccion    ir al estado 46
    v_asignacion     ir al estado 47
    v_alternativa    ir al estado 48
    v_opciones       ir al estado 49
    v_iteracion      ir al estado 50
    v_it_cota_exp    ir al estado 51
    v_it_cota_fija   ir al estado 52
    v_accion_ll      ir al estado 53


Estado 20

   11 v_declaraciones: v_declaracion_tipo . v_declaraciones

    T_TIPO       desplazar e ir al estado 6
    T_CONSTANTE  desplazar e ir al estado 7
    T_VAR        desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_declaraciones     ir al estado 54
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 21

   12 v_declaraciones: v_declaracion_cte . v_declaraciones

    T_TIPO       desplazar e ir al estado 6
    T_CONSTANTE  desplazar e ir al estado 7
    T_VAR        desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_declaraciones     ir al estado 55
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 22

   13 v_declaraciones: v_declaracion_var . v_declaraciones

    T_TIPO       desplazar e ir al estado 6
    T_CONSTANTE  desplazar e ir al estado 7
    T_VAR        desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_declaraciones     ir al estado 56
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 23

  101 v_accion_d: T_ACCION . v_a_cabecera v_bloque T_FACCION

    T_ID  desplazar e ir al estado 57

    v_a_cabecera  ir al estado 58


Estado 24

  102 v_funcion_d: T_FUNCION . v_f_cabecera v_bloque T_DEV v_expresion T_FFUNCION

    T_ID  desplazar e ir al estado 59

    v_f_cabecera  ir al estado 60


Estado 25

    2 v_cabecera_alg: v_decl_globales v_decl_a_f . v_decl_ent_sal T_COMENTARIO

    T_ENT     reduce usando la regla 45 ($@1)
    $default  reduce usando la regla 48 ($@3)

    v_decl_ent_sal  ir al estado 61
    $@1             ir al estado 62
    $@3             ir al estado 63


Estado 26

    7 v_decl_a_f: v_accion_d . v_decl_a_f

    T_ACCION   desplazar e ir al estado 23
    T_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (v_decl_a_f)

    v_decl_a_f   ir al estado 64
    v_accion_d   ir al estado 26
    v_funcion_d  ir al estado 27


Estado 27

    8 v_decl_a_f: v_funcion_d . v_decl_a_f

    T_ACCION   desplazar e ir al estado 23
    T_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (v_decl_a_f)

    v_decl_a_f   ir al estado 65
    v_accion_d   ir al estado 26
    v_funcion_d  ir al estado 27


Estado 28

    4 v_decl_globales: v_declaracion_tipo v_decl_globales .

    $default  reduce usando la regla 4 (v_decl_globales)


Estado 29

    5 v_decl_globales: v_declaracion_cte v_decl_globales .

    $default  reduce usando la regla 5 (v_decl_globales)


Estado 30

   18 v_lista_d_tipo: T_ID T_CREAR_TIPO . v_d_tipo T_COMP_SECUENCIAL v_lista_d_tipo

    T_LITERAL_ENTERO       desplazar e ir al estado 66
    T_LITERAL_REAL         desplazar e ir al estado 67
    T_LITERAL_CARACTER     desplazar e ir al estado 68
    T_TIPO_ENTERO          desplazar e ir al estado 69
    T_TIPO_BOOLEANO        desplazar e ir al estado 70
    T_TIPO_CARACTER        desplazar e ir al estado 71
    T_TIPO_REAL            desplazar e ir al estado 72
    T_TIPO_CADENA          desplazar e ir al estado 73
    T_ID                   desplazar e ir al estado 74
    T_TUPLA                desplazar e ir al estado 75
    T_TABLA                desplazar e ir al estado 76
    T_REF                  desplazar e ir al estado 77
    T_PARENTESIS_APERTURA  desplazar e ir al estado 78
    T_NO                   desplazar e ir al estado 79
    T_VERDADERO            desplazar e ir al estado 80
    T_FALSO                desplazar e ir al estado 81
    T_OP_SUMA              desplazar e ir al estado 82
    T_OP_RESTA             desplazar e ir al estado 83

    v_d_tipo            ir al estado 84
    v_tipo_base         ir al estado 85
    v_expresion_t       ir al estado 86
    v_expresion         ir al estado 87
    v_exp               ir al estado 88
    v_literal_numerico  ir al estado 89
    v_operando          ir al estado 90
    v_funcion_ll        ir al estado 91


Estado 31

   15 v_declaracion_tipo: T_TIPO v_lista_d_tipo T_FTIPO . T_COMP_SECUENCIAL

    T_COMP_SECUENCIAL  desplazar e ir al estado 92


Estado 32

   35 v_lista_d_cte: T_ID T_OP_REL_IGUAL . v_literal T_COMP_SECUENCIAL v_lista_d_cte

    T_LITERAL_ENTERO    desplazar e ir al estado 66
    T_LITERAL_BOOLEANO  desplazar e ir al estado 93
    T_LITERAL_REAL      desplazar e ir al estado 67
    T_LITERAL_CARACTER  desplazar e ir al estado 94
    T_LITERAL_CADENA    desplazar e ir al estado 95

    v_literal           ir al estado 96
    v_literal_numerico  ir al estado 97


Estado 33

   16 v_declaracion_cte: T_CONSTANTE v_lista_d_cte T_FCONST . T_COMP_SECUENCIAL

    T_COMP_SECUENCIAL  desplazar e ir al estado 98


Estado 34

   43 v_lista_id: T_ID . T_SEPARADOR v_lista_id
   44           | T_ID . T_DEF_TIPO v_d_tipo

    T_DEF_TIPO   desplazar e ir al estado 99
    T_SEPARADOR  desplazar e ir al estado 100


Estado 35

   17 v_declaracion_var: T_VAR v_lista_d_var . T_FVAR T_COMP_SECUENCIAL

    T_FVAR  desplazar e ir al estado 101


Estado 36

   41 v_lista_d_var: v_lista_id . T_COMP_SECUENCIAL v_lista_d_var

    T_COMP_SECUENCIAL  desplazar e ir al estado 102


Estado 37

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg T_FALGORITMO . T_PUNTO

    T_PUNTO  desplazar e ir al estado 103


Estado 38

    3 v_bloque_alg: v_bloque T_COMENTARIO .

    $default  reduce usando la regla 3 (v_bloque_alg)


Estado 39

   80 v_operando: T_ID .
  110 v_accion_ll: T_ID . T_PARENTESIS_APERTURA v_l_ll T_PARENTESIS_CLAUSURA

    T_PARENTESIS_APERTURA  desplazar e ir al estado 104

    $default  reduce usando la regla 80 (v_operando)


Estado 40

   86 v_instruccion: T_CONTINUAR .

    $default  reduce usando la regla 86 (v_instruccion)


Estado 41

   93 v_opciones: T_SI . v_expresion T_SIMBOLO_BLOQUE_IF M

    T_LITERAL_ENTERO       desplazar e ir al estado 66
    T_LITERAL_REAL         desplazar e ir al estado 67
    T_ID                   desplazar e ir al estado 105
    T_PARENTESIS_APERTURA  desplazar e ir al estado 78
    T_NO                   desplazar e ir al estado 79
    T_VERDADERO            desplazar e ir al estado 80
    T_FALSO                desplazar e ir al estado 81
    T_OP_SUMA              desplazar e ir al estado 82
    T_OP_RESTA             desplazar e ir al estado 83

    v_expresion         ir al estado 106
    v_exp               ir al estado 88
    v_literal_numerico  ir al estado 89
    v_operando          ir al estado 90
    v_funcion_ll        ir al estado 91


Estado 42

   98 v_it_cota_exp: T_MIENTRAS . M v_expresion T_HACER M v_instrucciones T_FMIENTRAS

    $default  reduce usando la regla 77 (M)

    M  ir al estado 107


Estado 43

   99 v_it_cota_fija: T_PARA . v_it_cota_fija_exp T_HACER M v_instrucciones T_FPARA

    T_ID  desplazar e ir al estado 108

    v_it_cota_fija_exp  ir al estado 109


Estado 44

   81 v_operando: v_operando . T_PUNTO v_operando
   82           | v_operando . T_INICIO_ARRAY v_expresion T_FIN_ARRAY
   83           | v_operando . T_REF
   91 v_asignacion: v_operando . T_ASIGNACION v_expresion

    T_INICIO_ARRAY  desplazar e ir al estado 110
    T_REF           desplazar e ir al estado 111
    T_ASIGNACION    desplazar e ir al estado 112
    T_PUNTO         desplazar e ir al estado 113


Estado 45

   10 v_bloque: v_declaraciones v_instrucciones .

    $default  reduce usando la regla 10 (v_bloque)


Estado 46

   84 v_instrucciones: v_instruccion . T_COMP_SECUENCIAL M v_instrucciones
   85                | v_instruccion .

    T_COMP_SECUENCIAL  desplazar e ir al estado 114

    $default  reduce usando la regla 85 (v_instrucciones)


Estado 47

   87 v_instruccion: v_asignacion .

    $default  reduce usando la regla 87 (v_instruccion)


Estado 48

   88 v_instruccion: v_alternativa .

    $default  reduce usando la regla 88 (v_instruccion)


Estado 49

   92 v_alternativa: v_opciones . v_instrucciones M T_FSI
   94 v_opciones: v_opciones . v_instrucciones N T_SIMBOLO_ELSE M v_expresion T_SIMBOLO_BLOQUE_IF M

    T_ID         desplazar e ir al estado 39
    T_CONTINUAR  desplazar e ir al estado 40
    T_SI         desplazar e ir al estado 41
    T_MIENTRAS   desplazar e ir al estado 42
    T_PARA       desplazar e ir al estado 43

    v_operando       ir al estado 44
    v_instrucciones  ir al estado 115
    v_instruccion    ir al estado 46
    v_asignacion     ir al estado 47
    v_alternativa    ir al estado 48
    v_opciones       ir al estado 49
    v_iteracion      ir al estado 50
    v_it_cota_exp    ir al estado 51
    v_it_cota_fija   ir al estado 52
    v_accion_ll      ir al estado 53


Estado 50

   89 v_instruccion: v_iteracion .

    $default  reduce usando la regla 89 (v_instruccion)


Estado 51

   97 v_iteracion: v_it_cota_exp .

    $default  reduce usando la regla 97 (v_iteracion)


Estado 52

   96 v_iteracion: v_it_cota_fija .

    $default  reduce usando la regla 96 (v_iteracion)


Estado 53

   90 v_instruccion: v_accion_ll .

    $default  reduce usando la regla 90 (v_instruccion)


Estado 54

   11 v_declaraciones: v_declaracion_tipo v_declaraciones .

    $default  reduce usando la regla 11 (v_declaraciones)


Estado 55

   12 v_declaraciones: v_declaracion_cte v_declaraciones .

    $default  reduce usando la regla 12 (v_declaraciones)


Estado 56

   13 v_declaraciones: v_declaracion_var v_declaraciones .

    $default  reduce usando la regla 13 (v_declaraciones)


Estado 57

  103 v_a_cabecera: T_ID . T_PARENTESIS_APERTURA v_d_par_form T_PARENTESIS_CLAUSURA T_COMP_SECUENCIAL

    T_PARENTESIS_APERTURA  desplazar e ir al estado 116


Estado 58

  101 v_accion_d: T_ACCION v_a_cabecera . v_bloque T_FACCION

    T_TIPO       desplazar e ir al estado 6
    T_CONSTANTE  desplazar e ir al estado 7
    T_VAR        desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_bloque            ir al estado 117
    v_declaraciones     ir al estado 19
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 59

  104 v_f_cabecera: T_ID . T_PARENTESIS_APERTURA v_lista_d_var T_PARENTESIS_CLAUSURA T_DEV v_d_tipo T_COMP_SECUENCIAL

    T_PARENTESIS_APERTURA  desplazar e ir al estado 118


Estado 60

  102 v_funcion_d: T_FUNCION v_f_cabecera . v_bloque T_DEV v_expresion T_FFUNCION

    T_TIPO       desplazar e ir al estado 6
    T_CONSTANTE  desplazar e ir al estado 7
    T_VAR        desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_bloque            ir al estado 119
    v_declaraciones     ir al estado 19
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 61

    2 v_cabecera_alg: v_decl_globales v_decl_a_f v_decl_ent_sal . T_COMENTARIO

    T_COMENTARIO  desplazar e ir al estado 120


Estado 62

   47 v_decl_ent_sal: $@1 . v_decl_ent $@2 v_decl_sal

    T_ENT  desplazar e ir al estado 121

    v_decl_ent  ir al estado 122


Estado 63

   49 v_decl_ent_sal: $@3 . v_decl_sal

    T_SAL  desplazar e ir al estado 123

    $default  reduce usando la regla 52 (v_decl_sal)

    v_decl_sal  ir al estado 124


Estado 64

    7 v_decl_a_f: v_accion_d v_decl_a_f .

    $default  reduce usando la regla 7 (v_decl_a_f)


Estado 65

    8 v_decl_a_f: v_funcion_d v_decl_a_f .

    $default  reduce usando la regla 8 (v_decl_a_f)


Estado 66

   78 v_literal_numerico: T_LITERAL_ENTERO .

    $default  reduce usando la regla 78 (v_literal_numerico)


Estado 67

   79 v_literal_numerico: T_LITERAL_REAL .

    $default  reduce usando la regla 79 (v_literal_numerico)


Estado 68

   32 v_expresion_t: T_LITERAL_CARACTER .

    $default  reduce usando la regla 32 (v_expresion_t)


Estado 69

   28 v_tipo_base: T_TIPO_ENTERO .

    $default  reduce usando la regla 28 (v_tipo_base)


Estado 70

   26 v_tipo_base: T_TIPO_BOOLEANO .
